Se vuelve a modificar el título

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Prueba de Git</h1>
+    <h1>Prueba de Git cambios en el título</h1>
     <p>Prueba Git</p>
 </body>
 </html>
