--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Prueba de Git cambios en el título</h1>
     <p>Prueba Git</p>
+    <div>
+        <p>Esto es una prueba de caja.</p>
+    </div>
 </body>
 </html>
