--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
     <h1>Prueba de Git cambios en el título</h1>
     <p>Prueba Git</p>
     <div>
-        <p>Esto es una prueba de caja.</p>
+        <p>Esto es una prueba de caja1.</p>
     </div>
+    <div>
+        <p>Esto es una prueba de caja2.</p>
+    </div>
+    <div>
+        <p>Esto es una prueba de caja3.</p>
+    </div>
+    <div>
+        <p>Esto es una prueba de caja4.</p>
+    </div>
+
 </body>
 </html>
