hacemos otro cambio ne desa 1

--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=100%, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>Prueba de Git cambios en el título</h1>
     <p>Prueba Git</p>
     <div>
         <p>Esto es una prueba de caja1.</p>
+        <form>
+             </form>
     </div>
     <div>
         <p>Esto es una prueba de caja2.</p>
@@ -22,4 +26,5 @@
     </div>
 
 </body>
+
 </html>
